Added QTR for positionreadings.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelsam
 board = seeed_xiao
 framework = arduino
-lib_deps = mbed-ateyercheese/Sparkfun_TB6612@0.0.0+sha.9d2787060b3e
+lib_deps = 
+	pololu/QTRSensors@^4.0.0
+	sparkfun/SparkFun TB6612FNG Motor Driver Library@^1.0.0
